<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fpmislata.practicas.aplicacion12.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_layout"
        android:id="@+id/textView"
        android:gravity="center"
        style="@style/EstiloTexto"
        android:textSize="@dimen/titulo" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/game"
        android:id="@+id/editText"
        android:textSize="@dimen/titulo"
        android:gravity="center"
        android:layout_marginTop="30dp"
        style="@style/EstiloTexto"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp">

        <Button
            style="@style/EstiloTexto.Botones"
            android:text="@string/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/boton"
            android:id="@+id/btnStart" />

        <Button
            style="@style/EstiloTexto.Botones"
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/boton"
            android:id="@+id/btnConfig" />

        <Button
            style="@style/EstiloTexto.Botones"
            android:text="@string/ranking"
            android:textSize="@dimen/boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/EstiloTexto.Botones"
            android:textSize="@dimen/boton"
            android:text="@string/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/EstiloTexto.Botones"
            android:textSize="@dimen/boton"
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
